--------------------------------------------------------------------------------------------------
Release notes version 1.7.3_beta : Enhancements, modifications and corrected bugs since version 1.7.2 :
--------------------------------------------------------------------------------------------------
04/02/16 (TRUST)  Minor change: Option -without-host_file added to the TRUST configure tool (Do not load the environnement variables specified in an env_src/HOST_*.sh file)
03/02/16 (TRUST)  Minor change: Option -disable-check added to the TRUST configure tool (Disable checks for external packages)
15/12/15 (Tools)  Optimization: New configuration TGCC to client/serveur mode of VisIt on Curie and Airain via HPCDrive
--------------------------------------------------------------------------------------------------
Release notes version 1.7.2 : Enhancements, modifications and corrected bugs since version 1.7.1 :
--------------------------------------------------------------------------------------------------
02/11/15 (TRUST)  Translation : Several keywords in .data files are now in English. All the TRUST validation forms have been updated.
25/11/15 (TRUST)  Minor change: Option -config added to the trust script (Configure nedit, vim or emacs editor with keywords TRUST)
20/11/15 (Kernel) New keyword : New keyword champ_front_pression_from_u + boundary_field_inward normal_value (function of time)
20/11/15 (Kernel) New keyword : Add quiet option to SolveurSys
20/11/15 (TRUST)  New feature : Add of a column corresponding to ||TAU||_2 before |TAUx| in ***Ustar.face (turbulence model)
20/11/15 (TRUST)  New keyword : Add of a keyword dt_impr_ustar_mean_only to have means on boundaries in a NameTest_NamePb_ustar_mean_only.out file
13/11/15 (TRUST)  Portability : Released version of mpich upgrated to 3.1.4
06/11/15 (TRUST)  Bug fixed   : Diagonal preconditionning is fixed with periodic BC (it is OK for a parallel calculation)